added the models basics

--- a/instagram/templates/navbar.html
+++ b/instagram/templates/navbar.html
@@ -16,7 +16,9 @@
   </button>
         <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}">
       <input class="form-control mr-sm-2" type="text" placeholder="Search " name="search">
-
+    <i class="far fa-compass"></i>
+            <i class="far fa-heart"></i>
+            
 </nav>
 </body>
 </html>
