added the first migration

--- a/instagram/templates/navbar.html
+++ b/instagram/templates/navbar.html
@@ -18,7 +18,7 @@
       <input class="form-control mr-sm-2" type="text" placeholder="Search " name="search">
     <i class="far fa-compass"></i>
             <i class="far fa-heart"></i>
-            
+            <i class="far fa-user nav-item"></i>
 </nav>
 </body>
 </html>
