--- a/instagram/templates/registration/login.html
+++ b/instagram/templates/registration/login.html
@@ -19,7 +19,7 @@
           <form  action="/accounts/login/" method="post">
             {% csrf_token %}
             {% bootstrap_form form%}
-
+            dont have an account <a href="/accounts/register">Register</a>
             <div class="form-group">
               <input type="submit" class="btn btn-primary btn-sm" value="Login">
             </div>
