added the profile logout

--- a/instagram/templates/navbar.html
+++ b/instagram/templates/navbar.html
@@ -16,9 +16,11 @@
   </button>
         <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}">
       <input class="form-control mr-sm-2" type="text" placeholder="Search " name="search">
-    <i class="far fa-compass"></i>
-            <i class="far fa-heart"></i>
-            <i class="far fa-user nav-item"></i>
+            <div class="icons">
+                <a href="#"><i class="far fa-compass"></i></a>
+                <a href="#"><i class="far fa-heart"></i></a>
+                <a href="/profile"><i class="far fa-user nav-item"></i></a>
+            </div>
 </nav>
 </body>
 </html>
