--- a/instagram/templates/navbar.html
+++ b/instagram/templates/navbar.html
@@ -15,7 +15,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
         <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search " name="search">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search " name="search">
+        </form>
             <div class="icons">
                 <a href="#"><i class="far fa-compass"></i></a>
                 <a href="#"><i class="far fa-heart"></i></a>
