--- a/instagram/templates/timeline.html
+++ b/instagram/templates/timeline.html
@@ -6,7 +6,9 @@
     {% for pic in pics%}
     <!--Displaying the pictures-->
     <div class="card col-xs-9 col-sm-9 col-md-9 col-lg-9">
+      {{pic.user.username}}
       <img class="card-img-top" src="{{pic.image.url}}" alt="Image">
+    </div>
     {% empty %}
     <div class="row">
       <h2 class="text-center">There are No Pictures</h2>
