--- a/instagram/templates/search.html
+++ b/instagram/templates/search.html
@@ -1,24 +1,28 @@
 {%extends 'base.html'%}
 {% block content %}
 <div class="container">
-
   <div class="row">
-    <!--{% if cats%}-->
-      <!--<h2>Found {{ cats|length }} of searched term {{message}}</h2>-->
-    <!--{% else %}-->
-      <!--<h2> Found 0 categories for the search term {{message}}</h2>-->
-    <!--{% endif %}-->
-
+    {% if profiles %}
+    <h2>Profiles:</h2>
+    {% for profile in profiles %}
+      <div class="card col-xs-4 col-sm-4 col-md-4 col-lg-4">
+      {{profile.user.username}}
+      <img class="card-img-top" src="{{profile.profile_pic.url}}" alt="Image">
+    </div>
+    {% endfor %}
+    {% endif %}
+    <hr>
   </div>
 
   <div class="row">
 
-  {% if cats %}
-    {% for cat in cats %}
-      <!--<div class="col-sm-6 col-md-3">-->
-        <!--<a href="{% url 'category' cat.id%}"><h1>{{cat.category}}</h1></a>-->
-
-      <!--</div>-->
+  {% if pics %}
+    <h2>Pictures:</h2></br>
+    {% for pic in pics %}
+      <div class="card col-xs-9 col-sm-9 col-md-9 col-lg-9">
+      {{pic.user.username}}
+      <img class="card-img-top" src="{{pic.image.url}}" alt="Image">
+    </div>
     {% endfor %}
   {% endif %}
   </div>
