--- a/instagram/templates/picture.html
+++ b/instagram/templates/picture.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html'%}
+{% load bootstrap4 %}
+{%block content%}
+<div class="container" id="bod">
+  <div class="row">
+    {% if pic %}
+    <!--Displaying the picture and comment form-->
+    <div class="card col-xs-9 col-sm-9 col-md-9 col-lg-9">
+      {{pic.user.username}}
+      <img class="card-img-top" src="{{pic.image.url}}" alt="Image">
+      {{pic.post_date|timesince}} ago
+      <form action="{% url 'picture' pic.id %}" method="post" enctype="multipart/form-data">
+          {%csrf_token%}
+          {% bootstrap_form comment_form%}
+        </form>
+    </div>
+    {% else %}
+    <div class="row">
+      <h2 class="text-center">There are No Pictures</h2>
+    </div>
+    {% endif %}
+  </div>
+  <div>
+    {% for comment in comments %}
+        {{comment.user.username}}: {{comment.comment}}</br>
+      {% endfor %}
+  </div>
 
-</body>
-</html>
+</div>
+{%endblock%}
