--- a/instagram/templates/timeline.html
+++ b/instagram/templates/timeline.html
@@ -7,7 +7,7 @@
     <!--Displaying the pictures-->
     <div class="card col-xs-9 col-sm-9 col-md-9 col-lg-9">
       {{pic.user.username}}
-      <img class="card-img-top" src="{{pic.image.url}}" alt="Image">
+      <a href="{% url 'picture' pic.id %}"><img class="card-img-top" src="{{pic.image.url}}" alt="Image"></a>
 
     </div>
     {% empty %}
